--- a/Mduchesneau.Scheduled.Web/index.html
+++ b/Mduchesneau.Scheduled.Web/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.js"></script>
     <script type="text/javascript" src="bower_components/fullcalendar/dist/gcal.js"></script>
 
+    <script type="text/javascript" src="modules/file-upload.js"></script>
     <script type="text/javascript" src="modules/schedule-calendar.js"></script>
     <script type="text/javascript" src="modules/schedule-api.js"></script>
     <script type="text/javascript" src="app.js"></script>
@@ -21,8 +22,9 @@
 <body>
     <h2>Scheduled: schedule viewer</h2>
 
-    <section ng-controller="ImportController">
-    
+    <section ng-controller="ImportController as importer">
+        <input type="file" simple-file-upload="importFile" />
+        <button ng-click="importer.uploadFile()">Upload schedule</button>
     </section>
     <section ng-controller="CalendarController as calendar">
         <div class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''">
